--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <a href="../index.html">Главная</a>
-    <a href="catalog.html">Каталог</a>
-    <a href="../contacts.html">Контакты</a>
-    <h1>Каталог</h1>
-    <p>
+    <a class="menu" href="../index.html">Главная</a>
+    <a class="menu" href="catalog.html">Каталог</a>
+    <a class="menu" href="../contacts.html">Контакты</a>
+    <h1 class="title1">Каталог</h1>
+    <p class="main_p">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
       voluptates ut magnam similique praesentium nisi fugit necessitatibus,
       voluptate ducimus. Doloremque expedita rerum aspernatur at veritatis animi
@@ -36,8 +37,8 @@
       width="250"
       height="250"
     />
-    <h2>Женские духи</h2>
-    <p>
+    <h2 class="title2">Женские духи</h2>
+    <p class="main_p">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. At nam, illum
       consequatur eius pariatur corporis, iusto voluptates dolorum obcaecati
       voluptas, nesciunt tenetur ipsum quam rem libero? Reiciendis, debitis.
@@ -50,8 +51,8 @@
       width="250"
       height="250"
     />
-    <h2>Крем</h2>
-    <p>
+    <h2 class="title2">Крем</h2>
+    <p class="main_p">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. At nam, illum
       consequatur eius pariatur corporis, iusto voluptates dolorum obcaecati
       voluptas, nesciunt tenetur ipsum quam rem libero? Reiciendis, debitis.
@@ -64,8 +65,8 @@
       width="250"
       height="250"
     />
-    <h2>Туалетная вода</h2>
-    <p>
+    <h2 class="title2">Туалетная вода</h2>
+    <p class="main_p">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. At nam, illum
       consequatur eius pariatur corporis, iusto voluptates dolorum obcaecati
       voluptas, nesciunt tenetur ipsum quam rem libero? Reiciendis, debitis.
