--- a/index.html
+++ b/index.html
@@ -4,31 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="index.html">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
-    <h1>Главная страница</h1>
-    <p>
+    <a class="menu" href="index.html">Главная</a>
+    <a class="menu" href="catalog/catalog.html">Каталог</a>
+    <a class="menu" href="contacts.html">Контакты</a>
+    <h1 class="title1">Главная страница</h1>
+    <p class="main_p">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure enim
       quibusdam perferendis provident. Minus earum necessitatibus quaerat
       dolores amet ducimus quam? Praesentium suscipit incidunt molestias atque
       doloremque aspernatur itaque fuga.
     </p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>
+    <h2 class="title2">Добро пожаловать на сайт</h2>
+    <p class="main_p">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, hic?
       Neque dolores sed voluptatum blanditiis deserunt molestias explicabo
       tenetur nobis provident hic autem modi laboriosam incidunt quisquam
       corrupti, unde esse.
     </p>
-    <p>
+    <p class="main_p">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti iste
       illum corrupti fugiat rem tempore sequi officia natus, quasi nisi maiores
       architecto velit consectetur nesciunt sunt ut. Et, odit velit?
     </p>
-    <p>
+    <p class="main_p">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Error distinctio
       cumque provident, obcaecati dolorem eaque atque vero accusantium soluta
       explicabo animi quas quaerat quae, culpa aliquid ea, voluptate quod harum.
